# variantfoldrna

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: documentation.yaml
docker/plot_results/: Dockerfile  plot_results.yaml
docker/process_seq/: Dockerfile  process_seq.yaml
docker/riprap/: Dockerfile
docker/rnasnp/: Dockerfile  rnasnp.yaml
docker/snpeff/: Dockerfile
docker/snpfold/: Dockerfile  snpfold.py  snpfold.yaml
docs/: examples.rst  installation.rst  requirements.txt
docs/source/: conf.py  config.rst  index.rst  installation.rst  usage.rst
example_input/: example_csv_input.csv
example_output/csv/: combined_ribosnitch_prediction_37.0.txt
example_output/vcf/: combined_ribosnitch_prediction_37.0.txt
mutafoldrna/: __init__.py  mutafoldrna.py  mutafoldrna_utils.py
mutafoldrna/mutafoldrna_workflow/: mutafoldrna.smk
mutafoldrna/mutafoldrna_workflow/envs/: general.yaml  plotting.yaml  scramble.yaml
mutafoldrna/mutafoldrna_workflow/rules/: all_possible_snps.smk  chunk.smk  extract_seqs_spliced.smk  riprap.smk  vcf_header.smk  vep.smk
mutafoldrna/mutafoldrna_workflow/scripts/: extract_flank_sequences_null.py  generate_all_mutations.py  get_chrom_lengths.py  get_secondary_structure_and_pss.py  get_spliced_read_data.py  plot_scores.py  r2easyr.R  remurna_wrapper.py  run_r2easyr.py  vcfEffOnePerLine.pl
non_rbsn_snpfold/workflow/: variantfoldrna.smk
non_rbsn_snpfold/workflow/scripts/: get_read_data.go
sparcs/: sparcs.py  sparcs_utils.py
sparcs/sparcs_workflow/: config.yaml  sparcs.smk
sparcs/sparcs_workflow/envs/: extract_seqs.yaml  gffread.yaml  process_seq.yaml  riprap.yaml  snpeff_env.yaml
sparcs/sparcs_workflow/rules/: all_possible_snps.smk  chunk.smk  download.smk  ensemble.smk  ensemble_diversity.smk  extract_seqs.smk  extract_seqs_spliced.smk  get_top_percent.smk  neutral_background.smk  plot.smk  remurna.smk  riprap.smk  rnasnp.smk  scramble.smk  snpeff.smk  snpfold.smk  top_n_report.smk  vcf_header.smk  vep.smk
sparcs/sparcs_workflow/scripts/: build_gffutils.py  chunk_extracted_seqs.py  chunk_vcf.py  create_json_from_gffread_table.py  delta_ensemble_diversity_wrapper.py  delta_ensemble_stats.py  get_ensemble_diversity.py  get_n_percent_tails.py  get_n_results.py  get_read_data.py  get_secondary_structure_and_pss.py  get_spliced_read_data.py  get_top_n_percent.py  plot_scores.py  remove_duplicates.py  remurna_wrapper.py  riprap.py  riprap_wrapper.py  rnasnp_wrapper.py  scramble.py  snpfold.py  snpfold_wrapper.py  validate_vcf.py
sparcs/sparcs_workflow/sparcs.egg-info/: SOURCES.txt  entry_points.txt
src/sparcs/: __init__.py  sparcs.py
src/variantfoldrna/: __about__.py  __init__.py  __main__.py  snk.yaml
src/variantfoldrna/cli/: __init__.py
src/variantfoldrna/workflow/: Snakefile
src/workflow/envs/: riprap.yaml
src/workflow/rules/: snpeff.smk  snpfold.smk
src/workflow/scripts/: chunk_vcf.py
src/workflow/sparcs.egg-info/: PKG-INFO
test_data/: remove_id.py
tests/: README.md  run_tests.py  test_all_variantfoldrna_functionality.sh  test_chunk.py  test_chunk_csv.py  test_chunk_extract_seqs.py  test_extract_seqs.py  test_snpeff.py  test_vcf_header.py  utils.py
tests/scripts_tests/: test_build_gffutils.py  test_chunk_extracted_seqs.py  test_chunk_vcf.py  test_convert_gffread_to_json.py  test_get_read_data.py  test_remove_duplicates.py  test_riprap_wrapper.py  test_snpfold_wrapper.py  utils.py
tests/test_data/chunk_extracted_sequences/: extracted_sequences_test.txt
variantfoldrna/: __init__.py  mutafoldrna_utils.py  variantfoldrna.py  variantfoldrna_utils.py
variantfoldrna/variantfoldrna_workflow/: config.yaml  variantfoldrna.smk
workflow/: Snakefile  config.yaml  main.py  sparcs.py  sparcs.rules  utils.py
workflow/envs/: ribosnitch.yaml  riprap.yaml  snpeff_env.yaml
workflow/rules/: download.smk  extract_seqs.smk  plot.smk  riprap.smk  snpeff.smk  snpfold.smk
workflow/scripts/: get_read_data.py  plot_output.py  plot_snpfold.py  riprap.py  riprap_wrapper.py  snpfold_wrapper.py
(+363 files in other folders)
