[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mutafoldrna"
version = "0.0.1"
authors = [
  { name="Kobie Kirven", email="kjk6173@psu.edu" },
]
description = "A Snakemake pipeline for riboSNitch prediction"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/The-Bevilacqua-Lab/SPARCS"

# Add entry points for the command line interface
[project.scripts]
mutafoldrna = "mutafoldrna.mutafoldrna:main"

[tool.hatch.build]
include = [
  "mutafoldrna/*/*/*",
  "mutafoldrna/mutafoldrna_workflow/mutafoldrna.smk",
  "mutafoldrna/__init__.py",
  "mutafoldrna/mutafoldrna.py",
  "mutafoldrna/mutafoldrna_utils.py"
]
