[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "variantfoldrna"
version = "0.0.1"
authors = [
  { name="Kobie Kirven", email="kjk6173@psu.edu" },
]
description = "A Snakemake pipeline for riboSNitch prediction"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/The-Bevilacqua-Lab/SPARCS"

# Add entry points for the command line interface
[project.scripts]
variantfoldrna = "variantfoldrna.variantfoldrna:main"

[tool.hatch.build]
include = [
  "variantfoldrna/*/*/*",
  "variantfoldrna/variantfoldrna_workflow/variantfoldrna.smk",
  "variantfoldrna/__init__.py",
  "variantfoldrna/variantfoldrna.py",
  "variantfoldrna/variantfoldrna_utils.py"
]
